# keynote-recap

./: .gitignore  AGENTS.md  CHANGELOG.md  HIGHLIGHTS.md  LICENSE  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-guide.md  configuration.md  methodology.md  requirements.md
docs/examples/: README.md  config.example.yaml  config.preset-claude-only.yaml  config.preset-gemini-only.yaml  config.preset-mixed-cheap.yaml  config.preset-openai-only.yaml  io26-keynote-recap.md  io26-research-notes.md
docs/plans/: 2026-05-21-implementation-plan.md  2026-05-21-keynote-recap-design.md  2026-05-25-anti-shortcut-design.md  2026-05-25-internalized-defense-design.md  2026-05-25-v030-anthropic-provider-handoff.md  2026-05-26-v031-audit-checklist.md  2026-05-26-v031-image-quality-hard-gates.md
methodology/: anti-ai-lint.md  filter-three-principles.md  report-skeleton.md  source-attribution.md  style-rules.md
prompts/: 01-transcribe-fallback.md  03-extract-vision-filter.md  04-research-extract-facts.md  04-research-summarize.md  05-5-caption-verify.md  05-5-coverage-check.md  05-draft-callout.md  05-draft-outline.md  05-draft-write-easy.md  05-draft-write-strict.md  05-draft-write.md  README.md
src/keynote_recap/: __init__.py  cli.py  config.py  cost_tracker.py  frame_scorer.py  frontmatter.py  llm_client.py  methodology.py  official_channels.py  pipeline.py  preflight.py  preflight_env.py  search.py  state.py  util.py  verify.py
src/keynote_recap/stages/: download.py  draft.py  extract.py  render.py  research.py  segment.py  verify.py
tests/: test_smoke.py
