[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keynote-recap"
version = "0.2.4.1"
description = "Turn 1.5h tech keynote videos into Feishu-friendly illustrated Chinese recap reports."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "keynote-recap contributors" }]
requires-python = ">=3.10"
keywords = [
    "video-recap",
    "keynote",
    "llm",
    "youtube",
    "bilibili",
    "feishu",
    "summarization",
    "agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    # CLI
    "click>=8.1",                 # 待 M1 决策（也可能换 typer）

    # Video / audio
    "yt-dlp>=2024.5.0",
    "ffmpeg-python>=0.2.0",

    # LLM
    "openai>=1.30",                # OpenAI 兼容 client（支持任意兼容 endpoint）
    "anthropic>=0.30",              # 可选，针对 native Anthropic
    "tiktoken>=0.7",                # token 计数

    # Image
    "Pillow>=10.0",                 # frame_scorer.py 用

    # Web
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdown>=3.6",                # md → html
    "pygments>=2.17",                # 代码块高亮

    # Search
    "duckduckgo-search>=6.0",        # 默认 search provider（零 key 零成本）

    # Utils
    "pyyaml>=6.0",
    "rich>=13.7",                   # CLI 进度条 + 美化输出
    "pydantic>=2.7",                # config / state 校验
    "tenacity>=8.2",                # 重试
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]
search-tavily = [
    "tavily-python>=0.3",            # 用户可选升级到 Tavily（更高质量）
]

[project.urls]
Homepage = "https://github.com/Scarlett9826/keynote-recap"
Documentation = "https://github.com/Scarlett9826/keynote-recap/tree/main/docs"
Repository = "https://github.com/Scarlett9826/keynote-recap"
Issues = "https://github.com/Scarlett9826/keynote-recap/issues"

[project.scripts]
keynote-recap = "keynote_recap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/keynote_recap"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PT"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
